--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 										<input type="text"  class="form-control enter-city" id="city-input" placeholder="Type a city" />
 									</div>
 									<div class="col-2">
-										<button type="submit" value= "search" id="search-button" class="search">Search</button>
+										<button type="submit" value= "search" id="search-button" class="btn btn-primary">Search</button>
 									</div>
 									<div class="col-2">
-										<button type="submit" id="current-button" class="current">Current</button>
+										<button type="submit" id="current-button" class="btn btn-primary">Current</button>
 									</div>
 								</div>  
 							</div>
