added an Open-sourced on GitHub link and descrition

--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
 					</div>
 				</div>
 			</div> 
-		</body>
+			<div class="linkGit">
+ <a href="https://github.com/tatilfv/weather-app" target="_blank"> Open-sourced </a> on GitHub and coded by Tatiana Vasconcellos 
+		</div>
+	</body>
 	</html>
 	
 
