--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </p>
 							<h2>
 								
-			<span id="number-degrees"><strong>26</strong></span><span class="degrees"> <a href="#" class="celsius" id="celsius-link">°C</a>|<a href="#" class="fahrenheit" id="fahrenheit-link">°F</a></span>
+			<span id="number-degrees"><strong>26</strong></span><span class="degrees"> <a href="#" class="celsius" id="celsius-link">°C</a>
 							</h2>
 							<hr />
 							<br />
