--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 				integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 				crossorigin="anonymous"
 			/>
+			 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 			<link href="css/styles.css" rel="stylesheet" type="text/css" />
 			<link rel="preconnect" href="https://fonts.googleapis.com" />
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 			
 			<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
-			<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		
+		 <script src="https://unpkg.com/axios@1.0.0/dist/axios.min.js"></script>
 			<title>Weather App</title>
 		</head>
 		<body>
